@@ -1,0 +1,57 @@
+<?xml version="1.0" ?>
+
+<!-- Licensed to the Apache Software Foundation (ASF) under one or more contributor 
+	license agreements. See the NOTICE file distributed with this work for additional 
+	information regarding copyright ownership. The ASF licenses this file to 
+	You under the Apache License, Version 2.0 (the "License"); you may not use 
+	this file except in compliance with the License. You may obtain a copy of 
+	the License at http://www.apache.org/licenses/LICENSE-2.0 Unless required 
+	by applicable law or agreed to in writing, software distributed under the 
+	License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS 
+	OF ANY KIND, either express or implied. See the License for the specific 
+	language governing permissions and limitations under the License. -->
+
+<!-- This is a "kitchen sink" config file that tests can use. When writting 
+	a new test, feel free to add *new* items (plugins, config options, etc...) 
+	as long as they don't break any existing tests. if you need to test something 
+	esoteric please add a new "solrconfig-your-esoteric-purpose.xml" config file. 
+	Note in particular that this test is used by MinimalSchemaTest so Anything 
+	added to this file needs to work correctly even if there is now uniqueKey 
+	or defaultSearch Field. -->
+
+<config>
+
+	<dataDir>${solr.data.dir:}</dataDir>
+
+	<directoryFactory name="DirectoryFactory"
+		class="${solr.directoryFactory:solr.NRTCachingDirectoryFactory}" />
+
+	<luceneMatchVersion>${tests.luceneMatchVersion:LUCENE_CURRENT}</luceneMatchVersion>
+
+	<xi:include href="solrconfig.snippet.randomindexconfig.xml"
+		xmlns:xi="http://www.w3.org/2001/XInclude" />
+
+	<updateHandler class="solr.DirectUpdateHandler2">
+		<commitWithin>
+			<softCommit>${solr.commitwithin.softcommit:true}</softCommit>
+		</commitWithin>
+
+	</updateHandler>
+	<requestHandler name="/select" class="solr.SearchHandler">
+		<lst name="defaults">
+			<str name="echoParams">explicit</str>
+			<str name="indent">true</str>
+			<str name="df">text</str>
+		</lst>
+
+	</requestHandler>
+	
+	<queryResponseWriter name="javabin"
+                       class="solr.TestTolerantSearch$BadResponseWriter" />
+
+	<requestHandler name="/admin/"
+		class="org.apache.solr.handler.admin.AdminHandlers" />
+
+	<requestHandler name="/update" class="solr.UpdateRequestHandler" />
+</config>
+
